--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "@types/jest": "24.0.5",
     "@types/node": "11.9.4",
     "@types/react": "16.8.3",
@@ -10,6 +12,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "spectacle": "^5.4.0",
     "typescript": "3.3.3"
   },
   "scripts": {
